# update-pyproject

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  update_pyproject.py
